# dz19

./: app.py  crud.py  models.py  pyproject.toml  test.db
static/: main.css
templates/: create_note.html  home.html  note.html
