[tool.poetry]
name = "hw19"
version = "0.1.0"
description = ""
authors = ["HannaStarovoy <starovoitanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
